Clean up code and reorganize